--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Saira:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
